--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,4 +1,4 @@
-name: Minify Assets
+name: minify-assets
 
 on:
   push:
@@ -9,10 +9,10 @@ jobs:
   minify:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: checkout-code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
+      - name: set-up-nodejs
         uses: actions/setup-node@v2
         with:
           node-version: '14'
@@ -20,19 +20,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Minify HTML
+      - name: minify-html
         run: |
           npm install html-minifier -g
           find src -name 'index.html' -exec sh -c 'html-minifier --collapse-whitespace --remove-comments -o "$1" "$1"' _ {} \;
 
-      - name: Minify CSS
+      - name: minify-css
         run: |
           npm install cssnano-cli -g
           for file in src/css/*.css; do
             cssnano "$file" "$file"
           done
 
-      - name: Deploy to GitHub Pages
+      - name: deploy-to-gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
