--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -6,34 +6,34 @@ on:
       - main
 
 jobs:
-  minify:
+  minify-assets:
     runs-on: ubuntu-latest
     steps:
       - name: checkout-code
         uses: actions/checkout@v2
 
-      - name: set-up-nodejs
+      - name: set-up-node
         uses: actions/setup-node@v2
         with:
           node-version: '14'
 
-      - name: Install dependencies
+      - name: install-dependencies
         run: npm install
 
-      - name: minify-html
+      - name: minify-html-files
         run: |
           npm install html-minifier -g
-          find src -name 'index.html' -exec sh -c 'html-minifier --collapse-whitespace --remove-comments -o "$1" "$1"' _ {} \;
+          find . -name 'index.html' -exec sh -c 'html-minifier --collapse-whitespace --remove-comments -o "$1" "$1"' _ {} \;
 
-      - name: minify-css
+      - name: minify-css-files
         run: |
           npm install cssnano-cli -g
           for file in src/css/*.css; do
             cssnano "$file" "$file"
           done
 
-      - name: deploy-to-gh-pages
+      - name: deploy-to-github-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./src
+          publish_dir: .
