--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -15,34 +15,24 @@ jobs:
       - name: set-up-node
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '14'  # Atualizado para usar a versão desejada
 
       - name: install-dependencies
-        run: |
-          npm install
-          npm install html-minifier postcss-cli cssnano --save-dev
+        run: npm install html-minifier cssnano-cli -g
 
       - name: minify-html-files
         run: |
-          find . -name 'index.html' -exec sh -c 'npx html-minifier --collapse-whitespace --remove-comments -o "$1" "$1"' _ {} \;
+          find . -name 'index.html' -exec sh -c 'html-minifier --collapse-whitespace --remove-comments -o "$1" "$1"' _ {} \;
 
-      - name: extract-and-minify-css
+      - name: minify-css-files
         run: |
-          mkdir -p ./dist/css
-          for file in $(find . -name 'index.html'); do
-            grep -o '<link.*href="[^"]*"' "$file" | sed -E 's/.*href="([^"]*)".*/\1/' | while read cssfile; do
-              npx postcss "$cssfile" --use cssnano -d ./dist/css
-            done
+          for file in src/css/*.css; do
+            cssnano "$file" "$file"
           done
+          find . -name 'style.css' -exec sh -c 'cssnano "$1" "$1"' _ {} \;
 
-      - name: copy-minified-files
-        run: |
-          mkdir -p ./dist
-          cp -r ./src/* ./dist
-          cp -r ./dist/css ./dist
-
-      - name: deploy-to-gh-pages
+      - name: deploy-to-github-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist  # Publica o diretório dist
+          github_token: ${{secrets.GITHUB_TOKEN}}
+          publish_dir: .
