--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,4 +1,4 @@
-name: minify-assets
+name: minify
 
 on:
   push:
@@ -12,27 +12,30 @@ jobs:
       - name: checkout-code
         uses: actions/checkout@v2
 
+      # Instalar Node.js.
       - name: set-up-node
         uses: actions/setup-node@v2
         with:
           node-version: '14'
 
+      # Instalar o Minify.
       - name: install-dependencies
-        run: npm install html-minifier cssnano-cli -g
+        run: npm install minify -g
 
-      - name: minify-html-files
+      # Minificar arquivos HTML e CSS.
+      - name: minify-files
         run: |
-          find . -name 'index.html' -exec sh -c 'html-minifier --collapse-whitespace --remove-comments -o "$1" "$1"' _ {} \;
+          # Minificar arquivos HTML
+          find . -name 'index.html' -exec sh -c 'minify --html --output "$1" "$1"' _ {} \;
 
-      - name: minify-css-files
-        run: |
+          # Minificar arquivos CSS
           for file in src/css/*.css; do
-            cssnano "$file" "$file"
+            minify --css --output "$file" "$file"
           done
-          find . -name 'style.css' -exec sh -c 'cssnano "$1" "$1"' _ {} \;
+          find . -name 'style.css' -exec sh -c 'minify --css --output "$1" "$1"' _ {} \;
 
       - name: deploy-to-github-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
