--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -20,7 +20,7 @@ jobs:
       
       # Instalar npm e pacotes necessários. 
       - name: install-dependencies
-        run: npm install html-minifier cssnano-cli -g
+        run: npm install -g html-minifier cssnano-cli uglify-js
       
       # Miniaturizar os HTML.
       - name: minify-html
@@ -29,6 +29,10 @@ jobs:
       # Miniaturizar os CSS.
       - name: minify-css
         run: find . -name '*.css' -exec sh -c 'cssnano "$1" "$1"' _ {} \;
+      
+      # Miniaturizar os JS.
+      - name: minify-js
+        run: find . -name '*.js' -exec sh -c 'uglifyjs "$1" -o "$1" --compress --mangle' _ {} \;
       
       - name: deploy-to-github-pages
         uses: peaceiris/actions-gh-pages@v3
